# serper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  dependencies.md
docs/modules/: config.md  core.md  http.md  search.md  utils.md
examples/: basic_search.rs  debug_sdk.rs  demo.rs  env_config.rs  main.rs  simple.rs  test_api.rs
src/: client.rs  error.rs  lib.rs  models.rs  verify.rs
src/config/: mod.rs
src/core/: error.rs  mod.rs  types.rs
src/http/: client.rs  mod.rs  transport.rs
src/search/: mod.rs  query.rs  response.rs  service.rs
src/utils/: mod.rs
tests/: edge_cases.rs  integration_tests.rs
tests/common/: mod.rs
